kubernetes/apps/radicale/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: radicale
  namespace: radicale
  labels:
    app.kubernetes.io/name: radicale
spec:
  type: ClusterIP
  ports:
    - name: http
      port: 80
      targetPort: http
      protocol: TCP
  selector:
    app.kubernetes.io/name: radicale
