kubernetes/apps/radicale/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: radicale
  namespace: radicale
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: web
spec:
  ingressClassName: traefik
  rules:
    - host: calendar.pirackr.xyz
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: radicale
                port:
                  number: 80
